# marky

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yaml
api/: .env.example  .gitignore  biome.json  build.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/: .env.example  README.md  analyze_sentiment.py  api.py  backend.service  backend.timer  ingest_polymarket.py  marky-api.service  marky-ingest.service  marky-ingest.timer  pyproject.toml  setup.sh
backend/src/marky/: api.py  config.py  logging_setup.py
backend/src/marky/jobs/: daily_ingest.py
backend/src/marky/models/: polymarket.py  tasks.py
backend/src/marky/services/: dynamo.py  polymarket.py  s3.py  slugify.py
backend/tests/: conftest.py  test_config.py
backend/tests/jobs/: test_daily_ingest.py
backend/tests/models/: test_polymarket_models.py  test_tasks.py
backend/tests/services/: test_dynamo.py  test_polymarket.py  test_s3.py  test_slugify.py
frontend/: .env.example  .prettierignore  README.md  frontend.service  package-lock.json  package.json  pnpm-lock.yaml  setup.sh  svelte.config.js  vite.config.ts
lambdas/: .prettierrc  defaults.build.js  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: aws-creds.sh  deploy.sh  nuke-config.yml  nuke.sh
terraform/: .terraform.lock.hcl  README.md  api.tf  auth.tf  database.tf  locals.tf  main.tf  networking.tf  outputs.tf  pipeline.tf  provider.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
(+227 files in other folders)
